--- a/web開発/css/main.css
+++ b/web開発/css/main.css
@@ -1,6 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
+/*ヘッダー*/
 h1.title{
     font-family: "Nico Moji";
+    text-align: center;
+}
+nav.all{
+    text-align: center;
+}
+nav ul{
+    margin: 0;
+    padding: 0
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    width: 18%;
+    min-width: 90px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: #333;
+}
+nav ul li.current a{
+    color: #F33135;
+}
+nav ul li a:hover{
+    color: rgb(165, 214, 241)
+}
+
+/*フッター*/
+footer {
+    background-color: rgb(170, 163, 163);
+    color: whitesmoke;
+}
+.copyright{
     text-align: center;
 }
